<resources>
    <string name="app_name">BookingBus</string>
    <string name="title_activity_bt">BtActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="onboarding_title">Travel with Comfort</string>
    <string name="onboarding_description">Book your bus easily and securely. Enjoy comfortable travel with our premium bus service.</string>
    <string name="get_started">Get Started</string>

    <string name="default_web_client_id">YOUR_WEB_CLIENT_ID</string>
    <string name="booking_history">Booking History</string>
    <string name="search_bus_hint">Search bus...</string>
    <string name="no_buses_available">No buses available</string>
    <string name="profile_image">Profile Image</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="phone">Phone</string>
    <string name="phone_icon">Phone Icon</string>
    <string name="address">Address</string>
    <string name="address_icon">Address Icon</string>
    <string name="logout">Logout</string>
    <string name="username">username</string>
    <string name="email">email</string>
</resources>